--- a/SingtelDining-Info.plist
+++ b/SingtelDining-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>icon.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.cellcity.singteldining</string>
 	<key>CFBundleInfoDictionaryVersion</key>
