--- a/SingtelDining-Info.plist
+++ b/SingtelDining-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.png</string>
+	<string>icon</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.cellcity.singteldining</string>
 	<key>CFBundleInfoDictionaryVersion</key>
