*offer containner size *strip special chars in offer text *new UOB ONE Card face *citibank restaurant image

--- a/CreditCard.plist
+++ b/CreditCard.plist
@@ -186,9 +186,9 @@
 		</dict>
 		<dict>
 			<key>Title</key>
-			<string>UOB One Card</string>
+			<string>UOB ONE Card</string>
 			<key>Icon</key>
-			<string>UOB One Card.png</string>
+			<string>UOB ONE Card.png</string>
 		</dict>
 		<dict>
 			<key>Title</key>
