HSBC new icon and card name

--- a/CreditCard.plist
+++ b/CreditCard.plist
@@ -84,27 +84,27 @@
 	<array>
 		<dict>
 			<key>Title</key>
-			<string>HSBC Debit Card</string>
-			<key>Icon</key>
-			<string>61.png</string>
-		</dict>
-		<dict>
-			<key>Title</key>
-			<string>Premier Master Card Credit Card</string>
+			<string>HSBC Premier MasterCard® credit card</string>
 			<key>Icon</key>
 			<string>62.png</string>
 		</dict>
 		<dict>
 			<key>Title</key>
-			<string>HSBC Revolution Credit Card</string>
+			<string>HSBC Visa Platinum credit card</string>
+			<key>Icon</key>
+			<string>64.png</string>
+		</dict>
+		<dict>
+			<key>Title</key>
+			<string>HSBC&apos;s Revolution credit card</string>
 			<key>Icon</key>
 			<string>63.png</string>
 		</dict>
 		<dict>
 			<key>Title</key>
-			<string>HSBC Platinum Credit Card</string>
+			<string>HSBC debit card </string>
 			<key>Icon</key>
-			<string>64.png</string>
+			<string>61.png</string>
 		</dict>
 	</array>
 	<key>OCBC</key>
